# ICL_Official

./: .gitignore  COMPILER_ARCHITECTURE.md  FEATURE_COVERAGE_MATRIX.md  ICL_2.0_UNIVERSAL_TRANSLATION_ARCHITECTURE_PLAN.md  ICL_LANGUAGE_CONTRACT.md  ICL_SEMANTICS_GUIDE.md  ICL_STANDARDS.md  ICL_TEACHING_MANUAL.md  LANGUAGE_PACK_SPEC.md  MIGRATION_NOTES_v2.md  PHASE4_VALIDATION_REPORT.md  PHASE5_HARDENING_REPORT.md  PHASE6_STABILIZATION_REPORT.md  README.md  RELEASE_NOTES_v2.0.0.md  SIMULATION_NOTES.md  UNIVERSAL_ALIAS_MAP.md  checksums.txt  icl-mcp.spec  icp-mcp.spec  license.md  pyproject.toml  run_mcp.sh
.github/workflows/: binary-smoke.yml  ci.yml
docs/: cli_guide.md  compiler_architecture.md  language_pack_creation_guide.md  language_spec.md  mcp_quickstart.md  mcp_tool_docs.md  roadmap.md
examples/: basic.icl  control_flow.icl  functions.icl  macros.icl
icl/: __init__.py  agent_stdio.py  alias_map.py  api_server.py  ast.py  cli.py  contract_tests.py  errors.py  graph.py  ir.py  language_pack.py  lexer.py  lowering.py  main.py  mcp_catalog.py  mcp_errors.py  mcp_policy.py  mcp_server.py  optimize.py  parser.py  plugin.py  scaffolder.py  semantic.py  serialization.py  service.py  source_map.py  tokens.py
icl/expanders/: __init__.py  base.py  js_backend.py  (+2 more)
tests/: test_agent_stdio.py  test_aliases.py  test_api_server.py  test_cli.py  test_contract_matrix.py  test_expanders.py  test_golden_programs.py  test_graph.py  test_integration.py  test_lexer.py  test_mcp_server.py  test_parser.py  test_plugins.py  test_semantic.py  test_service.py  test_v2_pipeline.py
(+39 files in other folders)
