[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icl-lang"
version = "0.1.0"
description = "Intent Compression Language compiler"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ICL Team" }]
dependencies = []

[project.scripts]
icl = "icl.cli:run"
